--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -195,6 +195,13 @@ img {
   margin-bottom: 10px;
 }
 
+.hero-text h3 {
+  margin-bottom: 10px;
+  font-family: 'Tangerine', cursive;
+  font-size: 5rem;
+  
+}
+
 .hero-text p {
   font-size: clamp(1rem, 2vw, 1.3rem);
   margin-bottom: 20px;
@@ -207,7 +214,7 @@ img {
   color: black;
   padding: 10px 20px;
   font-weight: bold;
-  border-radius: 5px;
+  border-radius: 20px;
   transition: background-color 0.3s ease;
   display: inline-block;
 }
@@ -400,6 +407,7 @@ footer {
 .about-text {
   flex: 1 1 50%;
   min-width: 300px;
+  color: #d29fc7;
 }
 
 .about-text h2 {
@@ -411,7 +419,7 @@ footer {
 .about-text p {
   font-size: 1.05rem;
   line-height: 1.6;
-  color: #333;
+  color: #d29fc7;
   margin-bottom: 15px;
 }
 
@@ -839,6 +847,7 @@ footer {
   gap: 20px;
   align-items: center;
   padding: 40px 20px;
+  background-color: rgb(236, 218, 218);
 }
 
 .about-me-picture {
