--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -204,7 +204,8 @@ img {
   transform: translate(-50%, -50%);
   text-align: center;
   color: white;
-  font-family: 'Tangerine', cursive;
+  font-family: sans-serif;
+  
   padding: 10px;
 }
 .hero-text h1 {
@@ -219,12 +220,13 @@ img {
 }
 
 .hero-text h3 {
-  font-size: 2rem; /* Default size for smaller screens */
+  font-size: 1rem; /* Default size for smaller screens */
   margin-bottom: 10px;
+  font-family: 'Tangerine', cursive;
 }
 
 .hero-text p {
-  font-size: clamp(1rem, 2vw, 1.3rem);
+  font-size: clamp(10rem, 2vw, 1.5rem);
   margin-bottom: 20px;
 }
 
@@ -1353,7 +1355,7 @@ footer {
     width: 100%; /* Ensure the image fills the container */
     height: 100%; /* Ensure the image fills the container */
     object-fit: cover; /* Scale the image proportionally and fill the container */
-    object-position: bottom; /* Center the image within the container */
+    object-position: center; /* Center the image within the container */
 }
 .connect-info {
   text-align: center;
